--- a/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart2/exercises/1_CharacterizeAndRefactorE2EBackend/begin/package.json
+++ b/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart2/exercises/1_CharacterizeAndRefactorE2EBackend/begin/package.json
@@ -34,7 +34,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^28.1.8",
     "@types/node": "^18.19.31",
-    "@types/supertest": "^6.0.2",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.20.0",
@@ -43,17 +43,17 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
-    "jest-cucumber": "^3.0.2",
+    "jest-cucumber": "^4.5.0",
     "nodemon": "^2.0.19",
     "onchange": "^7.1.0",
     "prettier": "^2.7.1",
+    "prisma": "^4.16.0",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
-    "supertest": "^6.3.4",
+    "supertest": "^7.1.1",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "prisma": "^4.16.0"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@prisma/client": "^4.16.0",
