--- a/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/packages/backend/package.json
+++ b/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/packages/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript-starter",
+  "name": "@dddforum/backend",
   "version": "1.0.0",
-  "description": "A basic typescript app starter for 2023.",
+  "description": "Backend application for dddforum",
   "main": "index.js",
   "scripts": {
     "build": "rimraf ./build && tsc",
@@ -56,6 +56,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@dddforum/shared": "file:../shared",
     "@prisma/client": "^4.16.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
