chore: setup script to start the frontend and backend code from the root project folder - add e2e acceptance test to shared folder - setup script to run e2e tests on the frontend and backend

--- a/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/package.json
+++ b/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "scripts": {
     "clean": "npm run clean --workspaces --if-present",
-    "build": "npm run build --workspaces --if-present"
+    "build": "npm run build --workspaces --if-present",
+    "start:back": "npm run start:dev --workspace=@dddforum/backend",
+    "start:front": "npm run start:dev --workspace=@dddforum/frontend",
+    "test:e2e:back": "npm run test:e2e --workspace=@dddforum/backend",
+    "test:e2e:front": "npm run test:e2e --workspace=@dddforum/frontend"
   },
   "workspaces": [
     "packages/*"
