--- a/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/packages/backend/tsconfig.json
+++ b/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/packages/backend/tsconfig.json
@@ -11,6 +11,6 @@
     "types": ["node", "jest"],
     "skipLibCheck": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tests/**/*.test.ts"],
   "exclude": ["src/**/*.spec.ts"]
 }
