--- a/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/packages/frontend/package.json
+++ b/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/packages/frontend/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "frontend",
+  "name": "@dddforum/frontend",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start:dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:e2e": "jest --verbose tests/e2e/ --runInBand"
   },
   "dependencies": {
     "@dddforum/shared": "file:../shared",
@@ -24,14 +25,18 @@
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "babel-jest": "^30.0.4",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "jest": "^30.0.4",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
