--- a/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/packages/backend/package.json
+++ b/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/packages/backend/package.json
@@ -36,9 +36,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^28.1.8",
     "@types/node": "^18.6.1",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.20.0",
@@ -52,6 +54,7 @@
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
+    "supertest": "^7.1.3",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
