refactor: break out create user slice into 4 tiers

--- a/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/packages/backend/tsconfig.json
+++ b/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/packages/backend/tsconfig.json
@@ -11,6 +11,6 @@
     "types": ["node", "jest"],
     "skipLibCheck": true
   },
-  "include": ["src/**/*", "tests/**/*.test.ts"],
+  "include": ["src/**/*", "tests/**/*.test.ts", "src/shared/utils"],
   "exclude": ["src/**/*.spec.ts"]
 }
