--- a/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/packages/backend/package.json
+++ b/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/packages/backend/package.json
@@ -10,7 +10,7 @@
     "db:seed": "prisma db seed",
     "db:reset": "rimraf ./dev.db && npm run migrate && npm run generate",
     "start:dev": "npm run migrate && npm run generate && npx nodemon",
-    "start": "npm run build && node build/index.js",
+    "start": "npm run build && node build/src/index.js",
     "lint": "eslint . --ext .ts",
     "prettier-format": "run-script-os",
     "prettier-format:win32": "prettier --config .prettierrc \"./src/**/*.ts\" --write",
@@ -57,7 +57,7 @@
     "supertest": "^7.1.3",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@dddforum/shared": "file:../shared",
