feat: implement api client for posts - update seed and start script on the backend

--- a/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/packages/backend/package.json
+++ b/ThePhasesOfCraftship/2_best_practice_first/strategicDesignPart3/assignment/begin/packages/backend/package.json
@@ -10,7 +10,7 @@
     "migrate:status": "prisma migrate status --schema=./src/shared/database/prisma/schema.prisma",
     "db:seed": "prisma db seed --schema=./src/shared/database/prisma/schema.prisma",
     "db:reset": "rimraf ./dev.db && npm run migrate && npm run generate",
-    "start:dev": "npm run migrate && npm run generate && npx nodemon",
+    "start:dev": "npm run db:reset && npx nodemon",
     "start": "npm run build && node build/src/index.js",
     "lint": "eslint . --ext .ts",
     "prettier-format": "run-script-os",
