--- a/ThePhasesOfCraftship/2_best_practice_first/uiToDB/assignment/begin/packages/frontend/tsconfig.json
+++ b/ThePhasesOfCraftship/2_best_practice_first/uiToDB/assignment/begin/packages/frontend/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src/**/*", "tests/**/*.e2e.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
