chore: implement contract tests for user repository - break out mailing list external api integration into ports and adapters - update marketing service to depend on mailing api port

--- a/ThePhasesOfCraftship/2_best_practice_first/advancedTesting/assignment/begin/packages/backend/package.json
+++ b/ThePhasesOfCraftship/2_best_practice_first/advancedTesting/assignment/begin/packages/backend/package.json
@@ -15,6 +15,7 @@
     "test": "jest",
     "test:dev": "jest --watchAll",
     "test:e2e": "jest -c jest.config.e2e.ts",
+    "test:infra": "jest -c jest.config.infra.ts",
     "test:e2e:dev": "jest -c jest.config.e2e.ts --watch"
   },
   "husky": {
