--- a/ThePhasesOfCraftship/2_best_practice_first/advancedTesting/assignment/begin/packages/backend/package.json
+++ b/ThePhasesOfCraftship/2_best_practice_first/advancedTesting/assignment/begin/packages/backend/package.json
@@ -16,6 +16,7 @@
     "test:dev": "jest --watchAll",
     "test:e2e": "jest -c jest.config.e2e.ts",
     "test:infra": "jest -c jest.config.infra.ts",
+    "test:unit": "jest -c jest.config.unit.ts",
     "test:e2e:dev": "jest -c jest.config.e2e.ts --watch"
   },
   "husky": {
