--- a/ThePhasesOfCraftship/2_best_practice_first/deployment/assignment/begin/packages/frontend/tsconfig.json
+++ b/ThePhasesOfCraftship/2_best_practice_first/deployment/assignment/begin/packages/frontend/tsconfig.json
@@ -13,6 +13,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "esModuleInterop": true,
 
     /* Linting */
     "strict": true,
@@ -20,6 +21,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src/**/*", "tests/**/*.e2e.ts"], 
   "references": [{ "path": "./tsconfig.node.json" }]
 }
