move prisma to dev dependencies and use npx for generate command - add clean install command to build script

--- a/ThePhasesOfCraftship/2_best_practice_first/deployment/assignment/begin/packages/backend/package.json
+++ b/ThePhasesOfCraftship/2_best_practice_first/deployment/assignment/begin/packages/backend/package.json
@@ -1,14 +1,12 @@
 {
   "name": "@dddforum/backend",
   "version": "1.0.0",
-  "description": "The backend for dddforum",
-  "main": "index.js",
   "scripts": {
-    "build": "npm i && tsc -b tsconfig.json && npm run generate",
-    "generate": "ts-node prepareEnv.ts prisma generate --schema=./src/shared/database/prisma/schema.prisma",
-    "migrate": "ts-node prepareEnv.ts prisma migrate dev --schema=./src/shared/database/prisma/schema.prisma",
-    "db:seed": "ts-node prepareEnv.ts prisma db seed --schema=./src/shared/database/prisma/schema.prisma",
-    "db:reset": "ts-node prepareEnv.ts prisma migrate reset --preview-feature --schema src/shared/database/prisma/schema.prisma && npm run migrate && npm run generate",
+    "build": "npm install && npm run generate && tsc -b tsconfig.build.json",
+    "generate": "./node_modules/.bin/prisma generate --schema=./src/shared/database/prisma/schema.prisma",
+    "migrate": "ts-node prepareEnv.ts npx prisma migrate dev --schema=./src/shared/database/prisma/schema.prisma",
+    "db:seed": "ts-node prepareEnv.ts npx prisma db seed --schema=./src/shared/database/prisma/schema.prisma",
+    "db:reset": "ts-node prepareEnv.ts npx prisma migrate reset --preview-feature --schema src/shared/database/prisma/schema.prisma && npm run migrate && npm run generate",
     "start:dev": "npm run migrate && npm run generate && npx nodemon",
     "start:dev:no-watch": "npm run migrate && npm run generate && ts-node prepareEnv.ts ts-node src/index.ts",
     "lint": "eslint . --ext .ts --fix",
@@ -21,15 +19,13 @@
     "test:unit": "jest -c jest.config.unit.ts",
     "test:unit:dev": "jest -c jest.config.unit.ts --watchAll",
     "start:db:dev": "docker-compose up -d",
-    "start": "npm run migrate && npm run db:seed && node build/index.js"
+    "start": "npm run migrate && npm run db:seed && node build/index.js",
+    "postinstall": "npm run generate"
   },
   "husky": {
     "hooks": {
       "pre-commit": "npm run test && npm run prettier-format && npm run lint"
     }
-  },
-  "prisma": {
-    "seed": "ts-node ./src/shared/database/prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -39,16 +35,20 @@
     "@types/express": "^4.17.17",
     "@types/nodemailer": "^6.4.15",
     "@types/supertest": "^6.0.2",
+    "@types/node": "^20.8.0",
+    "@types/jest": "^29.5.5",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.3.0",
     "nodemon": "^2.0.19",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "@prisma/client": "^4.16.2",
+    "prisma": "^4.16.2",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@dddforum/shared": "file:../shared",
-    "@prisma/client": "^4.16.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "prisma": "^4.16.0"
+    "ts-node": "^10.9.2"
   }
 }
